--- a/src/style/index.less
+++ b/src/style/index.less
@@ -1,8 +1,62 @@
-@import '1.less';
+@import 'template/head.less';
+@import 'template/foot.less';
+@import 'property.less';
 
-.b{
-	margin: 0;
-	padding: 0;
-	border:none;
-	font-size: 14px;
+.fs(@px) {
+    font-size: unit( @px / 37.5, rem);
+}
+
+.w(@px) {
+    width: unit( @px / 37.5, rem);
+}
+
+.h(@px) {
+    height: unit( @px / 37.5, rem);
+}
+
+.lh(@px) {
+    line-height: unit( @px / 37.5, rem);
+}
+
+.mt(@px) {
+    margin-top: unit( @px / 37.5, rem);
+}
+
+.ml(@px) {
+    margin-left: unit( @px / 37.5, rem);
+}
+
+.mb(@px) {
+    margin-bottom: unit( @px / 37.5, rem);
+}
+
+.mr(@px) {
+    margin-right: unit( @px / 37.5, rem);
+}
+
+.pt(@px) {
+    padding-top: unit( @px / 37.5, rem);
+}
+
+.pl(@px) {
+    padding-left: unit( @px / 37.5, rem);
+}
+
+.pb(@px) {
+    padding-bottom: unit( @px / 37.5, rem);
+}
+
+.pr(@px) {
+    padding-right: unit( @px / 37.5, rem);
+}
+
+html,
+body {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+}
+
+body {
+    .fs(16);
 }
