--- a/src/style/index.less
+++ b/src/style/index.less
@@ -1,6 +1,11 @@
 @import 'template/head.less';
 @import 'template/foot.less';
+@import 'template/positionList.less';
+@import 'template/positionInfo.less';
+@import 'template/company.less';
+@import 'template/positionClass.less';
 @import 'property.less';
+@import 'position.less';
 
 .fs(@px) {
     font-size: unit( @px / 37.5, rem);
@@ -58,5 +63,15 @@ body {
 }
 
 body {
+	background-color: @bodyBgColor;
     .fs(16);
+}
+
+button{
+	border-width: 0;
+	outline-width: 0;
+}
+
+li{
+	list-style:none;
 }
