--- a/src/style/property.less
+++ b/src/style/property.less
@@ -1,3 +1,20 @@
+.bg-w{
+	background-color: #fff;
+}
+.c-w{
+	color:#fff;
+}
+.c-r{
+	color:red;
+}
+.p-r{
+	position: relative;
+}
+
+.p-a{
+	position: absolute;
+}
+
 .f-l{
 	float: left;
 }
