--- a/src/style/variable.less
+++ b/src/style/variable.less
@@ -6,3 +6,6 @@
 @lineColor:#d4d4d4;
 @highlightBgColor:#dbf9f4;
 @highlightColor:#01c2a3;
+@bodyBgColor:#eee;
+@btnColor:#def8f5;
+@dangerColor:red;
