--- a/src/view/template/positionList.html
+++ b/src/view/template/positionList.html
@@ -1,9 +1,10 @@
-<ul class="postion-list">
-	<li class="item">
-		<img class="logo" src="" alt="">
-		<h3>销售</h3>
-		<p>千度[上海] 互联网<br>
-			2016-06-01 11:05
+<ul class="position-list bg-w">
+	<li ui-sref="position({id:item.id})" class="item" ng-repeat ="item in data">
+		<img class="f-l logo" ng-src="{{item.imageUrl}}" alt="">
+		<h3 class="title" ng-bind="item.job"></h3>
+		<p class="text" ng-bind="item.companyName+'['+item.cityName+']'+' '+item.industryName"></p>
+		<p class="text" ng-bind="item.date">
 		</p>
+		<div class="clear"></div>
 	</li>
 </ul>
