--- a/src/style/index.less
+++ b/src/style/index.less
@@ -4,8 +4,11 @@
 @import 'template/positionInfo.less';
 @import 'template/company.less';
 @import 'template/positionClass.less';
+@import 'template/tab.less';
+@import 'template/sheet.less';
 @import 'property.less';
 @import 'position.less';
+@import 'search.less';
 
 .fs(@px) {
     font-size: unit( @px / 37.5, rem);
