--- a/src/style/index.less
+++ b/src/style/index.less
@@ -9,6 +9,7 @@
 @import 'property.less';
 @import 'position.less';
 @import 'search.less';
+@import 'login.less';
 
 .fs(@px) {
     font-size: unit( @px / 37.5, rem);
