--- a/src/style/variable.less
+++ b/src/style/variable.less
@@ -12,3 +12,5 @@
 @tabBgColor:#f7f7f7;
 @sheetBgColor:#f1f2f3;
 @sheetColor:#1063e5;
+@btnBgColor:rgba(18,213,181,.2);
+@formBgColor:rgba(0,0,0,.1);
