--- a/src/style/register.less
+++ b/src/style/register.less
@@ -8,6 +8,20 @@
     bottom: 0;
     form {
         .mt(60);
+        .ng-invalid {
+            & + span {
+                background-color: transparent;
+                position: absolute;
+                color: @dangerColor;
+                text-align: right;
+                right: 0;
+                height: 100%;
+                font-size: 12px;
+                p {
+                    margin: 0;
+                }
+            }
+        }
         .form-line {
             margin-left: auto;
             margin-right: auto;
@@ -20,7 +34,7 @@
             &:first-child {
                 border-bottom: 1px solid @defaultColor;
             }
-            span.icon{
+            span.icon {
                 background-color: @iconBgColor;
                 height: 100%;
                 .w(40);
@@ -46,20 +60,6 @@
                 &::-webkit-input-placeholder {
                     color: @defaultColor;
                 }
-                &.ng-invalid {
-                    & + span {
-                        background-color: transparent;
-                        position: absolute;
-                        color: @dangerColor;
-                        text-align: right;
-                        right: 0px;
-                        height: 100%;
-                        font-size: 12px;
-                        p{
-                            margin: 0;
-                        }
-                    }
-                }
             }
         }
         .message-wrap {
@@ -67,6 +67,13 @@
             .mt(40);
             margin-left: auto;
             margin-right: auto;
+            .ng-invalid{
+                & + span{
+                    right: 110px;
+                    top:10px;
+                    .h(16);
+                }
+            }
             .message-box {
                 .w(260);
                 height: 100%;
@@ -82,6 +89,7 @@
                 &::-webkit-input-placeholder {
                     color: @defaultColor;
                 }
+
             }
             .message {
                 .fs(14);
@@ -90,6 +98,10 @@
                 padding: 0 5px;
                 line-height: 20px;
                 margin-top: 5px;
+                &.disabled {
+                    color: @lineColor;
+                    border-color: @lineColor;
+                }
             }
         }
         button {
