--- a/src/style/my.less
+++ b/src/style/my.less
@@ -7,6 +7,13 @@
     .name {
         .mt(25);
     }
+    .login-btn {
+        background-color: @headBgColor;
+        .w(330);
+        .h(40);
+        .mt(200);
+        .fs(16);
+    }
     .btns {
         .mt(40);
         button {
@@ -21,10 +28,10 @@
             .mr(12);
         }
         .logout {
-        	background-color: @dangerColor;
-        	.w(330);
-        	.h(40);
-        	.mt(20)
+            background-color: @dangerColor;
+            .w(330);
+            .h(40);
+            .mt(20)
         }
     }
 }
