--- a/src/style/template/positionList.less
+++ b/src/style/template/positionList.less
@@ -25,5 +25,19 @@
             .ml(20);
             color: @dangerColor;
         }
+        .icon{
+            background-repeat: no-repeat;
+            background-size: contain;
+            .w(30);
+            .h(28);
+            top:14px;
+            right: 12px;
+            &.star{
+                background-image: url(../image/star.png);
+            }
+            &.star-active{
+                background-image: url(../image/star-active.png);
+            }
+        }
     }
 }
